Multiple foreign objects not rendered https://bugs.webkit.org/show_bug.cgi?id=72151

Patch by Florin Malita <fmalita@google.com> on 2011-11-14
Reviewed by Adam Barth.

Source/WebCore:

SVG end tags need to be case-adjusted (just like their start counterparts).

Test: svg/foreignObject/multiple-foreign-objects.html

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processEndTag):

LayoutTests:

* html5lib/runner-expected.txt: Rebaselined.
* platform/chromium/html5lib/runner-expected.txt: Rebaselined.
* svg/custom/use-multiple-on-nested-disallowed-font-expected.txt: Rebaselined.
* svg/foreignObject/multiple-foreign-objects-expected.png: Added.
* svg/foreignObject/multiple-foreign-objects-expected.txt: Added.
* svg/foreignObject/multiple-foreign-objects.html: Added.

Canonical link: https://commits.webkit.org/88712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100157 268f45cc-cd09-0410-ab3c-d52691b4dbfc